[package]
name = "github-heatmap"
description = "A CLI tool used to scrape a Github profile and mirror the SVG contribution heatmap as Unicode."
homepage = "https://github.com/adenh93/github-heatmap" 
repository = "https://github.com/adenh93/github-heatmap"
readme = "README.md"
keywords = ["github", "heatmap", "contributions", "scraping"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
colored = "2.0.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
thiserror = "1.0.35"
